--- a/signal_generator/mainwindow.ui
+++ b/signal_generator/mainwindow.ui
@@ -192,7 +192,7 @@
             </font>
            </property>
            <property name="text">
-            <string>Squre</string>
+            <string>Square</string>
            </property>
            <property name="checkable">
             <bool>true</bool>
@@ -473,6 +473,31 @@
            </property>
           </widget>
          </item>
+         <item row="1" column="1">
+          <widget class="QPushButton" name="btn_x_freq_dn">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>50</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>50</width>
+             <height>16777215</height>
+            </size>
+           </property>
+           <property name="text">
+            <string>&lt;</string>
+           </property>
+          </widget>
+         </item>
          <item row="3" column="2">
           <widget class="QSlider" name="slider_x_vac">
            <property name="sizePolicy">
@@ -507,31 +532,6 @@
            </property>
            <property name="tickInterval">
             <number>20</number>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="1">
-          <widget class="QPushButton" name="btn_x_freq_dn">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="minimumSize">
-            <size>
-             <width>0</width>
-             <height>50</height>
-            </size>
-           </property>
-           <property name="maximumSize">
-            <size>
-             <width>50</width>
-             <height>16777215</height>
-            </size>
-           </property>
-           <property name="text">
-            <string>&lt;</string>
            </property>
           </widget>
          </item>
@@ -593,6 +593,12 @@
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
+           <property name="minimumSize">
+            <size>
+             <width>35</width>
+             <height>0</height>
+            </size>
+           </property>
            <property name="maximumSize">
             <size>
              <width>30</width>
@@ -605,7 +611,7 @@
             </font>
            </property>
            <property name="text">
-            <string>deg.</string>
+            <string>deg</string>
            </property>
           </widget>
          </item>
@@ -749,46 +755,6 @@
            </property>
            <property name="text">
             <string>&gt;</string>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="2">
-          <widget class="QSlider" name="slider_x_freq">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="minimumSize">
-            <size>
-             <width>0</width>
-             <height>50</height>
-            </size>
-           </property>
-           <property name="maximumSize">
-            <size>
-             <width>600</width>
-             <height>50</height>
-            </size>
-           </property>
-           <property name="minimum">
-            <number>0</number>
-           </property>
-           <property name="maximum">
-            <number>100</number>
-           </property>
-           <property name="value">
-            <number>1</number>
-           </property>
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="tickPosition">
-            <enum>QSlider::TicksBelow</enum>
-           </property>
-           <property name="tickInterval">
-            <number>20</number>
            </property>
           </widget>
          </item>
@@ -976,6 +942,46 @@
            </property>
           </widget>
          </item>
+         <item row="1" column="2">
+          <widget class="QSlider" name="slider_x_freq">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>50</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>600</width>
+             <height>50</height>
+            </size>
+           </property>
+           <property name="minimum">
+            <number>0</number>
+           </property>
+           <property name="maximum">
+            <number>100</number>
+           </property>
+           <property name="value">
+            <number>1</number>
+           </property>
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="tickPosition">
+            <enum>QSlider::TicksBelow</enum>
+           </property>
+           <property name="tickInterval">
+            <number>20</number>
+           </property>
+          </widget>
+         </item>
         </layout>
        </item>
       </layout>
@@ -1101,7 +1107,7 @@
             </font>
            </property>
            <property name="text">
-            <string>Squre</string>
+            <string>Square</string>
            </property>
            <property name="checkable">
             <bool>true</bool>
@@ -1499,6 +1505,12 @@
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
+           <property name="minimumSize">
+            <size>
+             <width>35</width>
+             <height>0</height>
+            </size>
+           </property>
            <property name="maximumSize">
             <size>
              <width>30</width>
@@ -1511,7 +1523,7 @@
             </font>
            </property>
            <property name="text">
-            <string>deg.</string>
+            <string>deg</string>
            </property>
           </widget>
          </item>
@@ -1908,7 +1920,7 @@
        </property>
        <property name="font">
         <font>
-         <pointsize>40</pointsize>
+         <pointsize>30</pointsize>
          <weight>75</weight>
          <italic>true</italic>
          <bold>true</bold>
@@ -1918,7 +1930,7 @@
         <string>KOC</string>
        </property>
        <property name="alignment">
-        <set>Qt::AlignCenter</set>
+        <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
        </property>
       </widget>
      </item>
@@ -2022,9 +2034,9 @@
    <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>460</x>
+      <x>397</x>
       <y>20</y>
-      <width>198</width>
+      <width>261</width>
       <height>42</height>
      </rect>
     </property>
