--- a/signal_generator/mainwindow.ui
+++ b/signal_generator/mainwindow.ui
@@ -518,11 +518,14 @@
              <height>50</height>
             </size>
            </property>
+           <property name="minimum">
+            <number>1</number>
+           </property>
            <property name="maximum">
             <number>80</number>
            </property>
            <property name="value">
-            <number>0</number>
+            <number>1</number>
            </property>
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
@@ -1405,11 +1408,14 @@
              <height>50</height>
             </size>
            </property>
+           <property name="minimum">
+            <number>1</number>
+           </property>
            <property name="maximum">
             <number>80</number>
            </property>
            <property name="value">
-            <number>0</number>
+            <number>1</number>
            </property>
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
