--- a/signal_generator/mainwindow.ui
+++ b/signal_generator/mainwindow.ui
@@ -325,6 +325,22 @@
              <height>50</height>
             </size>
            </property>
+           <property name="cursor">
+            <cursorShape>OpenHandCursor</cursorShape>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">QSlider::groove:horizontal {
+    background-color: lightGray;
+    height: 10px;
+    margin: 0px;
+    }
+QSlider::handle:horizontal {
+    background-color: gray;
+    height: 30px;
+    width: 30px;
+    margin: -15px 0px;
+    }</string>
+           </property>
            <property name="maximum">
             <number>360</number>
            </property>
@@ -409,6 +425,22 @@
              <width>600</width>
              <height>50</height>
             </size>
+           </property>
+           <property name="cursor">
+            <cursorShape>OpenHandCursor</cursorShape>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">QSlider::groove:horizontal {
+    background-color: lightGray;
+    height: 10px;
+    margin: 0px;
+    }
+QSlider::handle:horizontal {
+    background-color: gray;
+    height: 30px;
+    width: 30px;
+    margin: -15px 0px;
+    }</string>
            </property>
            <property name="maximum">
             <number>160</number>
@@ -517,6 +549,22 @@
              <width>600</width>
              <height>50</height>
             </size>
+           </property>
+           <property name="cursor">
+            <cursorShape>OpenHandCursor</cursorShape>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">QSlider::groove:horizontal {
+    background-color: lightGray;
+    height: 10px;
+    margin: 0px;
+    }
+QSlider::handle:horizontal {
+    background-color: gray;
+    height: 30px;
+    width: 30px;
+    margin: -15px 0px;
+    }</string>
            </property>
            <property name="minimum">
             <number>1</number>
@@ -965,6 +1013,22 @@
              <height>50</height>
             </size>
            </property>
+           <property name="cursor">
+            <cursorShape>OpenHandCursor</cursorShape>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">QSlider::groove:horizontal {
+    background-color: lightGray;
+    height: 10px;
+    margin: 0px;
+    }
+QSlider::handle:horizontal {
+    background-color: gray;
+    height: 30px;
+    width: 30px;
+    margin: -15px 0px;
+    }</string>
+           </property>
            <property name="minimum">
             <number>1</number>
            </property>
@@ -1240,6 +1304,22 @@
              <height>50</height>
             </size>
            </property>
+           <property name="cursor">
+            <cursorShape>OpenHandCursor</cursorShape>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">QSlider::groove:horizontal {
+    background-color: lightGray;
+    height: 10px;
+    margin: 0px;
+    }
+QSlider::handle:horizontal {
+    background-color: gray;
+    height: 30px;
+    width: 30px;
+    margin: -15px 0px;
+    }</string>
+           </property>
            <property name="maximum">
             <number>360</number>
            </property>
@@ -1325,6 +1405,22 @@
              <height>50</height>
             </size>
            </property>
+           <property name="cursor">
+            <cursorShape>OpenHandCursor</cursorShape>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">QSlider::groove:horizontal {
+    background-color: lightGray;
+    height: 10px;
+    margin: 0px;
+    }
+QSlider::handle:horizontal {
+    background-color: gray;
+    height: 30px;
+    width: 30px;
+    margin: -15px 0px;
+    }</string>
+           </property>
            <property name="maximum">
             <number>160</number>
            </property>
@@ -1407,6 +1503,22 @@
              <width>600</width>
              <height>50</height>
             </size>
+           </property>
+           <property name="cursor">
+            <cursorShape>OpenHandCursor</cursorShape>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">QSlider::groove:horizontal {
+    background-color: lightGray;
+    height: 10px;
+    margin: 0px;
+    }
+QSlider::handle:horizontal {
+    background-color: gray;
+    height: 30px;
+    width: 30px;
+    margin: -15px 0px;
+    }</string>
            </property>
            <property name="minimum">
             <number>1</number>
@@ -1695,6 +1807,22 @@
              <width>600</width>
              <height>50</height>
             </size>
+           </property>
+           <property name="cursor">
+            <cursorShape>OpenHandCursor</cursorShape>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">QSlider::groove:horizontal {
+    background-color: lightGray;
+    height: 10px;
+    margin: 0px;
+    }
+QSlider::handle:horizontal {
+    background-color: gray;
+    height: 30px;
+    width: 30px;
+    margin: -15px 0px;
+    }</string>
            </property>
            <property name="minimum">
             <number>1</number>
