--- a/signal_generator/mainwindow.ui
+++ b/signal_generator/mainwindow.ui
@@ -95,7 +95,9 @@
            </property>
            <property name="font">
             <font>
-             <pointsize>16</pointsize>
+             <pointsize>18</pointsize>
+             <weight>75</weight>
+             <bold>true</bold>
             </font>
            </property>
            <property name="text">
@@ -128,7 +130,7 @@
            </property>
            <property name="font">
             <font>
-             <pointsize>16</pointsize>
+             <pointsize>18</pointsize>
             </font>
            </property>
            <property name="text">
@@ -158,7 +160,7 @@
            </property>
            <property name="font">
             <font>
-             <pointsize>16</pointsize>
+             <pointsize>18</pointsize>
             </font>
            </property>
            <property name="text">
@@ -188,7 +190,7 @@
            </property>
            <property name="font">
             <font>
-             <pointsize>16</pointsize>
+             <pointsize>18</pointsize>
             </font>
            </property>
            <property name="text">
@@ -1086,7 +1088,7 @@ QSlider::handle:horizontal {
            </property>
            <property name="font">
             <font>
-             <pointsize>16</pointsize>
+             <pointsize>18</pointsize>
             </font>
            </property>
            <property name="text">
@@ -1116,7 +1118,7 @@ QSlider::handle:horizontal {
            </property>
            <property name="font">
             <font>
-             <pointsize>16</pointsize>
+             <pointsize>18</pointsize>
             </font>
            </property>
            <property name="text">
@@ -1143,7 +1145,7 @@ QSlider::handle:horizontal {
            </property>
            <property name="font">
             <font>
-             <pointsize>16</pointsize>
+             <pointsize>18</pointsize>
             </font>
            </property>
            <property name="text">
@@ -1170,7 +1172,9 @@ QSlider::handle:horizontal {
            </property>
            <property name="font">
             <font>
-             <pointsize>16</pointsize>
+             <pointsize>18</pointsize>
+             <weight>75</weight>
+             <bold>true</bold>
             </font>
            </property>
            <property name="text">
@@ -2185,10 +2189,16 @@ QSlider::handle:horizontal {
        </property>
        <property name="font">
         <font>
-         <pointsize>12</pointsize>
+         <pointsize>14</pointsize>
          <weight>75</weight>
          <bold>true</bold>
         </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">QCheckBox::indicator {
+     width: 35px;
+     height: 35px;
+}</string>
        </property>
        <property name="text">
         <string>Enable X</string>
@@ -2211,10 +2221,16 @@ QSlider::handle:horizontal {
        </property>
        <property name="font">
         <font>
-         <pointsize>12</pointsize>
+         <pointsize>14</pointsize>
          <weight>75</weight>
          <bold>true</bold>
         </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">QCheckBox::indicator {
+     width: 35px;
+     height: 35px;
+}</string>
        </property>
        <property name="text">
         <string>Enable Y</string>
