--- a/signal_generator/mainwindow.ui
+++ b/signal_generator/mainwindow.ui
@@ -95,7 +95,7 @@
            </property>
            <property name="font">
             <font>
-             <pointsize>18</pointsize>
+             <pointsize>16</pointsize>
              <weight>75</weight>
              <bold>true</bold>
             </font>
@@ -130,7 +130,9 @@
            </property>
            <property name="font">
             <font>
-             <pointsize>18</pointsize>
+             <pointsize>16</pointsize>
+             <weight>75</weight>
+             <bold>true</bold>
             </font>
            </property>
            <property name="text">
@@ -160,7 +162,9 @@
            </property>
            <property name="font">
             <font>
-             <pointsize>18</pointsize>
+             <pointsize>16</pointsize>
+             <weight>75</weight>
+             <bold>true</bold>
             </font>
            </property>
            <property name="text">
@@ -190,7 +194,9 @@
            </property>
            <property name="font">
             <font>
-             <pointsize>18</pointsize>
+             <pointsize>16</pointsize>
+             <weight>75</weight>
+             <bold>true</bold>
             </font>
            </property>
            <property name="text">
@@ -1088,7 +1094,7 @@ QSlider::handle:horizontal {
            </property>
            <property name="font">
             <font>
-             <pointsize>18</pointsize>
+             <pointsize>16</pointsize>
             </font>
            </property>
            <property name="text">
@@ -1118,7 +1124,7 @@ QSlider::handle:horizontal {
            </property>
            <property name="font">
             <font>
-             <pointsize>18</pointsize>
+             <pointsize>16</pointsize>
             </font>
            </property>
            <property name="text">
@@ -1145,7 +1151,7 @@ QSlider::handle:horizontal {
            </property>
            <property name="font">
             <font>
-             <pointsize>18</pointsize>
+             <pointsize>16</pointsize>
             </font>
            </property>
            <property name="text">
@@ -1172,7 +1178,7 @@ QSlider::handle:horizontal {
            </property>
            <property name="font">
             <font>
-             <pointsize>18</pointsize>
+             <pointsize>16</pointsize>
              <weight>75</weight>
              <bold>true</bold>
             </font>
